--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css" />
     <link rel="stylesheet" href="dist/L.Control.Locate.min.css" />
     
-	<script type="text/javascript" src="trab.js"></script>
+	<script type="text/javascript" src="trab2.js"></script>
 	
 	
 	
